# IronMic

./: .gitignore  Cargo.toml  README.md
Backend/: Cargo.toml  Fetcher.Dockerfile  Processor.Dockerfile
Backend/data_processor/: Cargo.toml
Backend/data_processor/migrations/: 20240126042655_initial-create.sql
Backend/data_processor/src/: main.rs  session_trackers.rs  vnas.rs
Backend/data_processor/src/database/: models.rs  queries.rs
Backend/data_processor/src/vnas/: api_dtos.rs  extended_models.rs
Backend/datafeed_fetcher/: Cargo.toml
Backend/datafeed_fetcher/src/: main.rs
Backend/shared/: Cargo.toml
Backend/shared/src/: lib.rs
Frontend/: Frontend.sln
Frontend/Blazor/: Blazor.csproj  Dockerfile  Program.cs  appsettings.json  build-scoped-css.js  package-lock.json  package.json  tailwind.config.js
Frontend/Blazor/Components/: App.razor  Routes.razor  _Imports.razor
Frontend/Blazor/Components/Account/: IdentityComponentsEndpointRouteBuilderExtensions.cs  IdentityNoOpEmailSender.cs  IdentityRevalidatingAuthenticationStateProvider.cs  IdentityUserAccessor.cs
Frontend/Blazor/Components/Account/Pages/: ExternalLogin.razor  Login.razor
Frontend/Blazor/Components/Account/Shared/: ExternalLoginPicker.razor  ManageNavMenu.razor  VatsimLoginButton.razor
Frontend/Blazor/Components/Layout/: MainLayout.razor  NavMenu.razor  VatsimLoginButton.razor
Frontend/Blazor/Components/Layout/SideNav/: GroupHeader.razor  SideNav.razor
Frontend/Blazor/Components/Layout/TopNav/: NavButton.razor  NavMenu.razor
Frontend/Blazor/Components/Pages/: Active.razor  Data.razor  Online.razor  TopControllers.razor  TopPositions.razor
Frontend/Blazor/Components/Primitives/: Badge.razor  TailwindNavLink.cs  TimeSpanString.razor
Frontend/Blazor/Data/: ApplicationDbContext.cs  ApplicationUser.cs
Frontend/Blazor/Data/IronMic/: Artcc.cs  ControllerSession.cs  ControllerSessionPosition.cs  DatafeedRecord.cs  Facility.cs  ISession.cs  IronMicDbContext.cs  IronMicRepository.cs  Position.cs  PositionSession.cs  PositionSessionFacility.cs
Frontend/Blazor/Data/Migrations/: 00000000000000_CreateIdentitySchema.Designer.cs  00000000000000_CreateIdentitySchema.cs  ApplicationDbContextModelSnapshot.cs
Frontend/Blazor/Data/Scaffold/: ActiveControllerSession.cs  ActivePositionSession.cs  Artcc.cs  CompletedControllerSession.cs  CompletedPositionSession.cs  ControllerSessionPositionJoin.cs  DatafeedRecord.cs  Facility.cs  IronmicContext.cs  Position.cs  PositionSessionFacilityJoin.cs  SqlxMigration.cs  VnasFetchRecord.cs
Frontend/Blazor/ExtensionUtilities/: ISessionUtilities.cs
Frontend/Blazor/Properties/: launchSettings.json
Frontend/Blazor/wwwroot/css/: app.min.css
Frontend/OAuth.Vatsim/: VatsimAuthenticationHandler.cs
data_processor/: Cargo.toml
data_processor/migrations/: 20240126042655_initial-create.sql
data_processor/src/: database.rs  db_models.rs  main.rs  matchers.rs  session_trackers.rs  stats_models.rs  vnas_aggregate_models.rs  vnas_api.rs  vnas_api_models.rs
data_processor/src/database/: models.rs  queries.rs
data_processor/src/vnas/: api.rs  extended_models.rs
datafeed_fetcher/: Cargo.toml
datafeed_fetcher/src/: main.rs
migrations/: 20240126042655_initial-create.sql
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs  notes.md  stats_models.rs  vnas.rs  vnas_aggregate_models.rs  vnas_api.rs  vnas_api_models.rs  vnas_models.rs
