[package]
name = "vatsim_data_machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0.195"
serde_json = "1.0.111"
serde = "1.0.195"
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = {  version = "0.11.23" , features = ["json", "brotli"] }
regex = "1.10.3"
vatsim_utils = "0.4.0"
