[workspace]
members = ["datafeed_fetcher", "data_processor", "shared"]
resolver = "2"

[workspace.dependencies]
vatsim_utils = "0.4.0"
rsmq_async = "8.0.1"
serde_derive = "1.0.196"
serde_json = "1.0.112"
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
chrono = { version = "0.4.33", features = ["serde"] }
serde = "1.0.196"