[package]
name = "datafeed_fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
vatsim_utils.workspace = true
rsmq_async.workspace = true
serde_json.workspace = true
shared = { path = "../shared" }