[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive.workspace = true
serde_json.workspace = true
serde.workspace = true
reqwest = {  version = "0.11.23" , features = ["json", "brotli"] }
regex = "1.10.3"
vatsim_utils.workspace = true
chrono.workspace = true